# makehell

./: makehell.sh
data/clib/: Makefile.am  autoclean.sh  configure.ac
data/clib/include/: Makefile.am
data/clib/include/libTEHPROGNAME/: Makefile.am  TEHPROGNAME.h
data/clib/libTEHPROGNAME/: Makefile.am  TEHPROGNAME.c
data/clib/src/: Makefile.am  testlibTEHPROGNAME.c
data/cprog/: AUTHORS  COPYING  configure.ac
data/cprog/src/: Makefile.am  TEHPROGNAME.c
data/cxxlib/: NEWS  README  configure.ac
data/cxxlib/include/libTEHPROGNAME/: TEHPROGNAME.h
data/cxxlib/libTEHPROGNAME/: Makefile.am  TEHPROGNAME.cpp
data/cxxlib/src/: Makefile.am  testlibTEHPROGNAME.cpp
data/cxxprog/: README  configure.ac
data/cxxprog/src/: Makefile.am  TEHPROGNAME.cpp
